--- a/templates/zerver/landing-nav.html
+++ b/templates/zerver/landing-nav.html
@@ -12,6 +12,9 @@
             <li on-page="features">
                 <a class="no-style" href="/features/">Features</a>
             </li>
+            <li on-page="plans">
+                <a class="no-style" href="/plans/">Plans</a>
+            </li>
             <li on-page="help">
                 <a class="no-style" href="/help/">Help Center</a>
             </li>
