--- a/templates/zerver/landing-nav.html
+++ b/templates/zerver/landing-nav.html
@@ -18,6 +18,9 @@
             <li on-page="plans">
                 <a class="no-style" href="/plans/">Plans</a>
             </li>
+            <li on-page="integrations">
+                <a class="no-style" href="/integrations/">Integrations</a>
+            </li>
             <li on-page="help">
                 <a class="no-style" href="/help/">Help Center</a>
             </li>
