Redesign "/integrations/" page in portico.
This redesigns the integrations page to incorporate the new landing nav,
CSS animations, and general styling of the product page set.

--- a/static/styles/portico.css
+++ b/static/styles/portico.css
@@ -107,12 +107,14 @@ body {
     list-style: none;
 }
 
-.markdown ol > li {
+.markdown ol > li,
+.portico-landing.integrations ol > li {
     counter-increment: item;
     margin-bottom: 5px;
 }
 
-.markdown ol > li:before {
+.markdown ol > li:before,
+.portico-landing.integrations ol > li:before {
     content: counter(item);
     display: inline-block;
     vertical-align: top;
@@ -126,7 +128,8 @@ body {
     text-align: center;
 }
 
-.markdown ol > li > p {
+.markdown ol > li > p,
+.portico-landing.integrations ol > li > p {
     display: inline-block;
     vertical-align: top;
     max-width: calc(100% - 30px);
@@ -143,6 +146,10 @@ body {
 }
 .markdown ul > li:before {
     content: none;
+}
+
+#hubot-integrations {
+    margin-top: 30px;
 }
 
 .title {
@@ -671,11 +678,6 @@ a.bottom-signup-button {
     margin-top: 5px;
 }
 
-.integration-lozenge:hover {
-    box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
-    background: #fefefe;
-}
-
 .integration-lozenge-static:hover {
     box-shadow: none;
     background: #ededed;
@@ -693,9 +695,6 @@ a.bottom-signup-button {
 
 .integration-lozenge .integration-label {
     display: block;
-    font-weight: 300;
-    font-size: 18px;
-    color: #000;
     text-align: center;
     padding-bottom: 18px;
     padding-top: 8px;
@@ -704,10 +703,10 @@ a.bottom-signup-button {
 .integration-lozenge .integration-label-secondary {
     display: block;
     font-size: 12px;
-    font-weight: 300;
+    font-weight: 500;
     text-align: center;
     padding-bottom: 5px;
-    color: #000;
+    color: #aaa;
 }
 
 .integration-instructions {
@@ -719,7 +718,6 @@ a.bottom-signup-button {
 }
 
 .api-page-header,
-.apps-page-header,
 .authors-page-header,
 .feature-page-header,
 .integrations-page-header,
@@ -746,14 +744,12 @@ a.bottom-signup-button {
 }
 
 .api-page-header,
-.apps-page-header,
 .authors-page-header,
 .feature-page-header,
 .integrations-page-header {
     padding-top: 56px;
 }
 
-.apps-page-header,
 .integrations-page-header,
 .register-page-header,
 .api-page-header {
@@ -789,9 +785,14 @@ a.bottom-signup-button {
 #integration-list-link {
     position: absolute;
     top: 200px;
-    width: 130px;
     text-align: center;
     display: none;
+    margin-left: 5px;
+}
+
+#integration-list-link span {
+    display: inline-block;
+    margin-left: 5px;
 }
 
 .integrations-page-header .integrations-icon {
