--- a/templates/zerver/features.html
+++ b/templates/zerver/features.html
@@ -10,7 +10,7 @@
 
 {% block portico_content %}
 
-{% include 'zerver/landing-nav.html' %}
+{% include 'zerver/landing_nav.html' %}
 
 <div class="portico-landing features-app">
     <div class="main">
