--- a/templates/zerver/landing_nav.html
+++ b/templates/zerver/landing_nav.html
@@ -23,6 +23,9 @@
             <li on-page="apps">
                 <a class="no-style" href="/apps/">Apps</a>
             </li>
+            <li on-page="plans">
+                <a class="no-style" href="/plans/">Plans</a>
+            </li>
             <li on-page="integrations">
                 <a class="no-style" href="/integrations/">Integrations</a>
             </li>
