--- a/static/styles/landing-page.css
+++ b/static/styles/landing-page.css
@@ -257,11 +257,6 @@ a.arrow:after {
     margin-left: 5px;
 }
 
-/* because the background of .testimonials is #444. */
-.testimonials a .arrow {
-    color: #444;
-}
-
 h1 {
     font-size: 2em;
 }
@@ -529,8 +524,7 @@ a:not(.no-style):hover:before {
 
 @media (max-width: 768px) {
     nav,
-    .features,
-    .testimonials .padded-content {
+    .features {
         padding-left: 50px;
         padding-right: 50px;
     }
@@ -667,10 +661,6 @@ a:not(.no-style):hover:before {
     }
 
     .main .padded-content {
-        padding: 20px;
-    }
-
-    .testimonials .padded-content {
         padding: 20px;
     }
 
