Modify portico page min-height to compensate for navbar.
The white nabber is 59px and we should compensate for its height by
changing the min-height of the .portico-page content box to the height
of the window minus the height of the nabber.

--- a/static/styles/portico.css
+++ b/static/styles/portico.css
@@ -568,6 +568,11 @@ a.bottom-signup-button {
     margin-bottom: -54px;
 }
 
+.portico-page {
+    /* height of the white portico navbar */
+    min-height: calc(100% - 59px);
+}
+
 .signup-signature {
     margin-top: 20px;
     padding-bottom: 50px;
