--- a/static/templates/settings/bot-list-admin.handlebars
+++ b/static/templates/settings/bot-list-admin.handlebars
@@ -1,6 +1,9 @@
 <div id="admin-user-list" class="settings-section" data-name="bot-list-admin">
-<div class="settings-section-title"><i class="icon-vector-github settings-section-icon"></i>
-{{t "Bots" }}</div>
+<div class="settings-section-title">
+    <i class="icon-vector-github settings-section-icon"></i>
+    {{t "Bots" }}
+    <input class='search-box' type="text" placeholder="{{t 'Search bots' }}"/>
+</div>
 <table class="table table-condensed table-striped wrapped-table">
   <tbody id="admin_bots_table" class="admin_bot_table">
     <th class="wrapped-cell">{{t "Name" }}</th>
