--- a/static/templates/subscription_settings.handlebars
+++ b/static/templates/subscription_settings.handlebars
@@ -89,6 +89,7 @@
     <div class="sub_settings_title float-left">{{t "Stream membership" }}</div>
     <div class="subscriber_list_add float-right">
       <form class="form-inline">
+          <input type="text" class="search" placeholder="{{t 'Search subscribers' }}" />
         <input type="text" name="principal" placeholder="{{t 'Email address' }}" value="" class="input-block" autocomplete="off" tabindex="-1" />
         <input type="submit" name="add_subscriber" value="{{t 'Add' }}" class="btn btn-primary add-subscriber-button" tabindex="-1 "/>
       </form>
